<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">学科同步-语文</string>
    <string name="seque">当前任务已加入下载队列！</string>
    <string name="lessonnoexist">课程内容被意外删除或移动，请重新下载后再试！</string>
    <string name="numless">您可用提问数不足，请在“名师答疑”程序中充值！</string>
    <string name="questionsucces">问题提交成功，请在“名师答疑”中查看解答!</string>
    <string name="questionfaile">问题提交失败,请检查网络后再试！</string>
    <string name="titleempty">请检查问题标题或内容是否为空！</string>
    <string name="upgrade_mesg">检测到最新版本，现在更新吗？</string>
    <string name="login_error">获取授权失败！</string>
    <string name="wt">网通</string>
    <string name="dx">电信</string>
    <string name="grade_title">年级选择</string>
    <string name="setting">设置</string>
    <string name="upgrade_soft">正在下载更新程序, 请稍候..  ..</string>
    <string name="all_course">全部课程</string>
    <string name="my_course">我的课程</string>
    <string name="download_manager">下载管理</string>
    <string name="other_functions">其它功能</string>
    <string name="go_back">返回上一级</string>
	<string name="enter_lesson">进入课程</string>
	<string name="download_text">下载</string>
	<string name="downloading_text">下载中…</string>
	<string name="downloaded_text">已下载</string>
	<string name="online_play_text">在线播放</string>
	<string name="play_text">本地播放</string>
	<string name="view_progress_text">查看进度</string>
	<string name="lesson_play_text">播放</string>
	<string name="lesson_delete_text">删除</string>
    <string name="upgrade_title">更新</string>
	<string name="all_begin_download_text">全部开始</string>
	<string name="all_cancel_download_text">全部暂停</string>
	<string name="donwload_status_failed">下载失败</string>
	<string name="donwload_status_paused">暂停</string>
    <string name="donwload_status_pedding">等待中…</string>
	<string name="donwload_status_running">下载中</string>
	<string name="donwload_status_successful">已完成</string>
	<string name="donwload_status_button_failed">重试</string>
	<string name="donwload_status_button_paused">继续</string>
    <string name="donwload_status_button_pedding">暂停</string>
	<string name="donwload_status_button_running">暂停</string>
	<string name="donwload_status_button_successful">播放</string>
	<string name="free_space_text">剩余空间:</string>
	<string name="title_redownload_confirm">重复下载确认</string>
	<string name="message_redownload_confirm">重复下载?</string>
	<string name="title_delete_confirm">删除确认</string>
	<string name="message_delete_confirm">确实要删除文件?</string>
    <string name="upgrade_message">正在刷新课程信息, 请稍候… …</string>
    <string name="video_title">初始化</string>
    <string name="video_message">正在初始化视频信息, 请稍候… …</string>
    <string name="download_title">下载确认</string>
    <string name="download_message">即将下载“ %s ”文件。</string>
    <string name="download_confirm_message">不再询问</string>
    <string name="network_title">网络连接</string>
    <string name="network_message">连接服务器失败，请检查网络。</string>
    <string name="site_title">资源站点选择</string>
    <string name="site_import">资源文件导入</string>
    <string name="ERROR_TIP">错误</string>
    <string name="view_downstatus">重新下载</string>
    <string name="title_dialog_alert">提示</string>
    <string name="view_exit_msg">你确定要退出本节课吗?</string>
    <string name="grade">年 级： </string>
    <string name="subject">学   科： </string>
    <string name="mtitle">标题：</string>
    <string name="ititle">请输入标题..</string>
    <string name="icontent">请输入内容..</string>
    <string name="edit">编辑</string>
    <string name="complete">完成</string>
    <string name="dao">导入</string>
    
    <string name="ji">记</string>
    <string name="jiang">讲</string>
    <string name="ce">测</string>
    <string name="da">答</string>
    <string name="tuozhan">拓展</string>
    <string name="jiexi">解析</string>
    <string name="xuefa">学法</string>
    <string name="tingli">听力</string>
</resources>
