<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical"
>
<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:text="@string/grade_title"/>
	<GridView
        android:id="@+id/gradeview"
        android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:numColumns="3"
    	android:scrollingCache="true"
    	android:horizontalSpacing="1dp"
    	android:verticalSpacing="1dp"
    	android:layout_marginTop="1dp"
    	android:layout_marginBottom="0dp"
    	android:layout_marginLeft="0dp"
    	android:layout_marginRight="0dp"
    	android:fastScrollEnabled="true"
        />
	<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:text="@string/site_title"/>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:paddingTop="10dp"
	android:paddingBottom="10dp"
	android:orientation="horizontal">
	
	<Button android:id="@+id/wt"
		style="@style/list_item_button_style"
	    android:text="@string/wt"
	    android:layout_marginLeft="20dp"
	/>
	<Button android:id="@+id/dx"
	    android:layout_marginLeft="20dp"
		style="@style/list_item_button_style"
	    android:text="@string/dx"
	/>
	</LinearLayout>
	<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:text="@string/site_import"/>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:paddingTop="10dp"
	android:paddingBottom="10dp"
	android:orientation="horizontal">
	<Button android:id="@+id/dao"
	    android:layout_marginLeft="20dp"
		style="@style/list_item_button_style"
	    android:text="@string/dao"
	/>
</LinearLayout>
</LinearLayout>